--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,12 @@ body{
 .navbar-brand{
     font-weight: 500;
 }
-
+.display-4{
+    font-size: 25px;
+}
 /*  Versi Desktop*/
 @media (min-width: 992px){
-
+    .display-4{
+        font-size: 50px;
+    }
 }
